fix: ajusta CI para aguardar serviços e garantir permissão dos scripts

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,10 @@ jobs:
         run: docker compose up -d --build
 
       - name: Aguardar serviços
-        run: sleep 20
+        run: sleep 30
+
+      - name: Garantir permissão scripts
+        run: chmod +x scripts/*.sh
 
       - name: Executar testes
         run: ./scripts/test.sh
