--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,38 @@
 version: "3.9"
 
 services:
+  db:
+    image: postgres:15
+    container_name: meu-app-db
+    environment:
+      POSTGRES_DB: appdb
+      POSTGRES_USER: appuser
+      POSTGRES_PASSWORD: apppass
+    ports:
+      - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U appuser"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
+
   app:
-    container_name: app-pro-container
     build: .
+    container_name: meu-app-app
     ports:
       - "5000:5000"
     depends_on:
-      - postgres
+      db:
+        condition: service_healthy
     environment:
-      - PYTHONUNBUFFERED=1
+      DATABASE_HOST: db
+      DATABASE_PORT: 5432
+      DATABASE_NAME: appdb
+      DATABASE_USER: appuser
+      DATABASE_PASSWORD: apppass
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:5000"]
+      interval: 5s
+      timeout: 3s
+      retries: 10
 
-  postgres:
-    container_name: postgres-db
-    image: postgres:15
-    ports:
-      - "5432:5432"
-    environment:
-      POSTGRES_USER: meuuser
-      POSTGRES_PASSWORD: minhasenha
-      POSTGRES_DB: meubanco
-    volumes:
-      - pgdata:/var/lib/postgresql/data
-
-volumes:
-  pgdata:
